2008-05-03  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm: Support for global attributes.
	Status of XML specs are added.

2008-05-03  Wakaba  <wakaba@suika.fam.cx>

	* ContentChecker.pm (check_element): Support for |template=""|
	and |ref=""| attribute (referent element type checking).

2008-04-29  Wakaba  <wakaba@suika.fam.cx>

	* CacheManifest.pm (_parse): New same origin definition (HTML5 revision
	1500) is implemented (except for IDNA part and URI-scheme-specific
	knowledge).  Line number counting was wrong for LF-only
	documents.

2008-04-13  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Raise an parse error for any disallowed
	character (HTML5 revision 1263).

2008-04-13  Wakaba  <wakaba@suika.fam.cx>

	* mkentitylist.pl: Support for new HTML5 entity table format (the
	definition for |AElig;| was missing).

2008-04-13  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src, mkhtmlparser.pl: Support for element/attribute
	name/namespace fixup (HTML5 revisions 1413, 1415, 1416, and 1417).

2008-04-13  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: List of element names that close foreign content
	insertion mode is added (HTML5 revisions 1412 and 1418).

2008-04-13  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Support for |mglyph| and |malignmark|
	elements (HTML5 revision 1410).

2008-04-13  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Support for new long MathML entities (HTML5
	revision 1406).

2008-04-13  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: CDATA section support for MathML and SVG 
	elements (HTML5 revision 1404 and 1420).

2008-04-12  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src, mkhtmlparser.pl: Support for MathML and SVG
	elements (HTML5 revision 1404).  Unused !!!macro definitions
	are removed.

2008-04-12  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src, mkhtmlparser.pl: The way permitted slash errors
	are raised is changed (HTML5 revision 1404).

2008-04-06  Wakaba  <wakaba@suika.fam.cx>
