@@ -1,7 +1,7 @@
 1..2192
 # Running under perl version 5.008007 for linux
-# Current time local: Mon May  5 12:56:09 2008
-# Current time GMT:   Mon May  5 03:56:09 2008
+# Current time local: Mon May  5 13:17:54 2008
+# Current time GMT:   Mon May  5 04:17:54 2008
 # Using Test.pm version 1.25
 # t/content-model-1.dat
 ok 1
