@@ -1,7 +1,7 @@
 1..1068
 # Running under perl version 5.008007 for linux
-# Current time local: Mon May  5 12:55:29 2008
-# Current time GMT:   Mon May  5 03:55:29 2008
+# Current time local: Mon May  5 13:17:26 2008
+# Current time GMT:   Mon May  5 04:17:26 2008
 # Using Test.pm version 1.25
 # t/tokenizer/test1.test
 ok 1
