@@ -1,5 +1,10 @@
 2008-05-05  Wakaba  <wakaba@suika.fam.cx>
 
+	* ContentType.t: Test data of HTML with BOM are added (c.f.
+	HTML5 revision 1282).
+
+2008-05-05  Wakaba  <wakaba@suika.fam.cx>
+
 	* content-model-2.dat: Test data for repeat* global attributes
 	are added.
 
