@@ -1,3 +1,8 @@
+2008-05-05  Wakaba  <wakaba@suika.fam.cx>
+
+	* ContentType.pm: Skip BOMs n feed or HTML algorithm (HTML5 revision
+	1282).
+
 2008-05-03  Wakaba  <wakaba@suika.fam.cx>
 
 	* ContentChecker.pm: Support for global attributes.
